[tool.poetry]
name = "ethereum-indexer"
version = "0.1.0"
description = "Blockchain indexer"
authors = ["RKL <hello@rl.games>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
web3 = "^5.28.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
